--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "devrabiul/laravel-toaster-magic": "^1.0",
         "laravel/framework": "^12.0",
         "laravel/jetstream": "^5.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.0",
         "mallardduck/blade-lucide-icons": "^1.23",
+        "masmerise/livewire-toaster": "^2.7",
         "spatie/laravel-permission": "^6.17"
     },
     "require-dev": {
